2013-12-30  Martin Robinson  <mrobinson@igalia.com>

        [CMake] [GTK] Add support for GObject introspection
        https://bugs.webkit.org/show_bug.cgi?id=126162

        Reviewed by Daniel Bates.

        * PlatformGTK.cmake: Build a list of WebKitDOM headers and expose it to the
        parent scope of the build.

2013-12-30  Andreas Kling  <akling@apple.com>

        Text::createTextRenderer() should return a RenderPtr.
        <https://webkit.org/b/126292>

        Make createTextRenderer() return a RenderPtr and remove one manual
        destroy() call. Also, since it should always return a valid object,
        I turned a null check into an assertion instead.

        Reviewed by Antti Koivisto.

2013-12-30  Antti Koivisto  <antti@apple.com>

        Remove attachChild
        https://bugs.webkit.org/show_bug.cgi?id=126288

        Reviewed by Andreas Kling.

        * dom/ContainerNode.cpp:
        (WebCore::destroyRenderTreeIfNeeded):
        
            Rename detachChild and move the tests here.

        (WebCore::ContainerNode::takeAllChildrenFrom):
        
            No need to call attachRenderTree explicitly anymore.

        (WebCore::ContainerNode::removeBetween):

2013-12-29  Andreas Kling  <akling@apple.com>

        RenderLayer: Store corner and resizer renderers in RenderPtrs.
        <https://webkit.org/b/126274>

        Turn RenderLayer::m_scrollCorner and m_resizer into RenderPtrs.
        Removed manual destroy() calls as appropriate. Also tweaked some
        code to reduce nesting.

        Reviewed by Anders Carlsson.

2013-12-30  Antti Koivisto  <antti@apple.com>

        XML document builder should create render tree asynchronously
        https://bugs.webkit.org/show_bug.cgi?id=126285

        Reviewed by Andreas Kling.
        
        Stop creating renderers explicitly. 
        Fix SVG <use> element to not rely on parse time render tree construction.

        * svg/SVGUseElement.cpp: